logout error resolved

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -9,7 +9,7 @@ body {font-family: Arial, Helvetica, sans-serif; text-align: center;}
 </head>
 <body>
     <h1>Hi ! Welcome to dashboard. </h1>
-    <form action="/logout?_method=DELETE" method="POST">
+    <form action="/logout?_method=delete" method="POST">
         <button type="submit">Log Out</button>
     </form>
 </body>
