--- a/views/login.ejs
+++ b/views/login.ejs
@@ -7,7 +7,7 @@
 body {font-family: Arial, Helvetica, sans-serif; text-align: center;}
 form {border: 3px solid #f1f1f1;}
 
-input[type=text], input[type=password] {
+input[type=email], input[type=password] {
   width: 100%;
   padding: 12px 20px;
   margin: 8px 0;
@@ -81,8 +81,8 @@ span.psw {
   </div>
 
   <div class="container">
-    <label for="uname"><b>Email/b></label>
-    <input type="email" placeholder="Enter Username" name="email" id="email" required>
+    <label for="email"><b>Email</b></label>
+    <input type="email" placeholder="Enter Email" name="email" id="email" required>
 
     <label for="password"><b>Password</b></label>
     <input type="password" placeholder="Enter Password" name="password" id="password" required>
@@ -97,7 +97,7 @@ span.psw {
   <div class="container" style="background-color:#f1f1f1">
     <!-- <button type="button" class="cancelbtn">Cancel</button> -->
     <span class="psw"><a href="/register">Register</a></span>
-    <span class="psw"><a href="#">Forgot password?</a></span>
+    <span class="psw"><a href="#"><br><br>Forgot password?</a></span>
     <span class="psw"><a href="#"><br><br>Contact us</a></span>
   </div>
 </form>
